--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - Central Race</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
+<title>Mecânica - Deboxe Customs</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/Nw9g2Q2.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -141,8 +141,8 @@ body{
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px" draggable="false">
-      <div class="logo">Central Race</div>
+      <img src="https://imgur.com/Nw9g2Q2.png" style="height:70px;border-radius:8px" draggable="false">
+      <div class="logo">Deboxe Customs</div>
     </div>
 
     <button class="navbar-toggler d-md-none" type="button">
@@ -217,10 +217,10 @@ body{
 <h2 class="text-center mb-4">Sobre Nós</h2>
 <div class="row align-items-center">
   <div class="col-md-6 text-center">
-    <img src="https://imgur.com/0iskhD3.png">
+    <img src="https://imgur.com/Nw9g2Q2.png">
   </div>
   <div class="col-md-6">
-    <p>A Central Race oferece serviços automotivos com qualidade e excelência.</p>
+    <p>A Deboxe Customs oferece serviços automotivos com qualidade e excelência.</p>
   </div>
 </div>
 </section>
@@ -248,7 +248,7 @@ body{
 </div>
 
 <footer class="text-center py-4 text-muted">
-© <span id="year"></span> Central Race
+© <span id="year"></span> Deboxe Customs
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -261,3 +261,4 @@ toggler.addEventListener('click',()=>mobileMenu.classList.toggle('show'));
 
 </body>
 </html>
+
