--- a/index.html
+++ b/index.html
@@ -3,262 +3,223 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - Deboxe Customs</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/Nw9g2Q2.png">
+<title>Mecânica - Central Race</title>
+<link rel="icon" href="https://imgur.com/0iskhD3.png">
 
-<!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
   --preto:#0b0b0b;
+  --cinza:#141414;
   --vermelho:#e10600;
+  --vermelho2:#ff2a1a;
   --amarelo:#ffcc00;
   --dourado:#ffb300;
 }
 
 body{
-  font-family:"Inter",system-ui,sans-serif;
-  background:#f7f7f7;
   margin:0;
-  user-select:none;
+  font-family:Inter,system-ui;
+  background:var(--preto);
+  color:#f1f1f1;
 }
 
 /* ===== MENU ===== */
-.topbar{
-  background:linear-gradient(90deg,#000 0%,#140000 40%,#1a0000 100%);
-  padding:14px 0;
+header{
+  background:linear-gradient(90deg,#000,#140000,#1a0000);
   border-bottom:2px solid var(--vermelho);
-  box-shadow:0 6px 18px rgba(0,0,0,.6);
+  box-shadow:0 6px 20px rgba(0,0,0,.7);
 }
-.logo{
+.logo-text{
   font-weight:800;
-  font-size:1.25rem;
+  font-size:1.3rem;
   background:linear-gradient(135deg,var(--vermelho),var(--amarelo));
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
-.nav-links a{
-  color:#f1f1f1;
-  text-decoration:none;
-  margin-left:22px;
+.nav-link{
+  color:#fff!important;
   font-weight:600;
-  position:relative;
 }
-.nav-links a::after{
-  content:"";
-  position:absolute;
-  left:0; bottom:-6px;
-  width:0%; height:2px;
-  background:linear-gradient(90deg,var(--vermelho),var(--amarelo));
-  transition:.25s;
-}
-.nav-links a:hover{ color:var(--amarelo); }
-.nav-links a:hover::after{ width:100%; }
+.nav-link:hover{ color:var(--amarelo)!important; }
 
 .discord-btn{
   background:linear-gradient(135deg,var(--vermelho),var(--amarelo));
   color:#000;
   font-weight:800;
-  padding:8px 16px;
   border-radius:14px;
+  padding:8px 18px;
   text-decoration:none;
-  transition:.25s;
 }
-.discord-btn:hover{ transform:translateY(-2px); }
 
-#mobileMenu{ background:#0b0b0b; border-radius:14px; }
-.mobile-link{ color:#fff; text-decoration:none; font-weight:600; }
-.mobile-link:hover{ color:var(--amarelo); }
-
-/* ===== CURSOS ===== */
-.card-service{
-  border-radius:16px;
-  overflow:hidden;
+/* ===== SEÇÕES ===== */
+.section{
+  padding:70px 20px;
+}
+.section-title{
+  text-align:center;
+  font-size:2.4rem;
+  font-weight:800;
   margin-bottom:20px;
-  cursor:pointer;
-  transition:.3s;
+  background:linear-gradient(135deg,var(--vermelho),var(--amarelo));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
-.card-service:hover{ transform:translateY(-4px); }
-.card-service img{ height:180px; object-fit:cover; }
+.section-sub{
+  text-align:center;
+  max-width:900px;
+  margin:0 auto 40px;
+  color:#ccc;
+}
 
-/* ===== CARDS ANIMADOS ===== */
-.cards-animated{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:25px;
-  margin-top:50px;
-}
-.card-animated{
-  background:#0f0f0f;
+/* ===== CARDS ===== */
+.card-box{
+  background:linear-gradient(180deg,#111,#080808);
   border-radius:18px;
   padding:30px;
-  text-align:center;
-  color:#eaeaea;
+  border:1px solid #1e1e1e;
   transition:.3s;
 }
-.card-animated:hover{
-  transform:translateY(-5px);
-  box-shadow:0 0 40px rgba(225,6,0,.45);
-}
-.glow-red{ color:#ff3232; font-size:48px; text-shadow:0 0 20px #ff3232; }
-.glow-yellow{ color:#ffd700; font-size:48px; text-shadow:0 0 20px #ffd700; }
-.glow-blue{ color:#00c8ff; font-size:48px; text-shadow:0 0 20px #00c8ff; }
-
-/* ===== SOBRE ===== */
-.about-section{
-  background:#222;
-  color:#fff;
-  padding:40px 20px;
-  border-radius:12px;
-  margin-top:50px;
-}
-.about-section img{
-  max-width:250px;
-  border-radius:8px;
+.card-box:hover{
+  transform:translateY(-6px);
+  box-shadow:0 0 35px rgba(225,6,0,.35);
 }
 
-/* MODAL */
-.modal-video iframe{
-  width:100%;
-  height:400px;
-  border:none;
-  border-radius:8px;
+/* ===== VIDEOS ===== */
+.video-box iframe{
+  border-radius:16px;
+  border:2px solid var(--vermelho);
 }
-@media(max-width:576px){
-  .modal-video iframe{ height:250px; }
+
+/* ===== REGRAS ===== */
+.rule{
+  display:flex;
+  gap:14px;
+  margin-bottom:15px;
+}
+.rule i{
+  color:var(--amarelo);
+  margin-top:4px;
+}
+
+/* ===== FOOTER ===== */
+footer{
+  background:#000;
+  padding:25px;
+  text-align:center;
+  border-top:2px solid var(--vermelho);
+  color:#aaa;
 }
 </style>
 </head>
 
 <body oncontextmenu="return false">
 
-<!-- MENU -->
-<header class="topbar">
-  <div class="container d-flex justify-content-between align-items-center flex-wrap">
-    <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/Nw9g2Q2.png" style="height:70px;border-radius:8px" draggable="false">
-      <div class="logo">Deboxe Customs</div>
-    </div>
-
-    <button class="navbar-toggler d-md-none" type="button">
-      <span style="width:30px;height:3px;background:#fff;display:block;margin:6px 0"></span>
-      <span style="width:30px;height:3px;background:#fff;display:block;margin:6px 0"></span>
-      <span style="width:30px;height:3px;background:#fff;display:block;margin:6px 0"></span>
-    </button>
-
-    <nav class="d-none d-md-flex align-items-center nav-links">
-      <a href="#">Início</a>
-      <a href="tabela.html">Preços</a>
-      <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
-        <i class="fa-brands fa-discord"></i> Discord
-      </a>
-    </nav>
-
-    <div class="d-md-none w-100 collapse mt-3" id="mobileMenu">
-      <div class="p-3">
-        <a href="#" class="mobile-link d-block py-2">Início</a>
-        <a href="tabela.html" class="mobile-link d-block py-2">Preços</a>
-        <a href="funcionarios.html" class="mobile-link d-block py-2">Funcionários</a>
-        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn w-100 text-center mt-2">
+<header>
+<nav class="navbar navbar-expand-lg container">
+  <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+    <img src="https://imgur.com/0iskhD3.png" height="60">
+    <span class="logo-text">Central Race</span>
+  </a>
+  <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="menu">
+    <ul class="navbar-nav gap-3 align-items-center">
+      <li><a class="nav-link" href="#">Início</a></li>
+      <li><a class="nav-link" href="#sobre">Sobre</a></li>
+      <li><a class="nav-link" href="#videos">Vídeos</a></li>
+      <li><a class="nav-link" href="#regras">Regras</a></li>
+      <li>
+        <a class="discord-btn" href="https://discord.gg/YuUsJGfH" target="_blank">
           <i class="fa-brands fa-discord"></i> Discord
         </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+</header>
+
+<!-- ===== SOBRE NÓS ===== -->
+<section class="section" id="sobre">
+  <h2 class="section-title">Sobre Nós</h2>
+  <p class="section-sub">
+    A <b>Central Race Mecânica</b> é referência em atendimento, qualidade e realismo dentro do RP.
+    Nosso objetivo é entregar uma experiência profissional, organizada e fiel ao roleplay,
+    mantendo sempre o respeito às regras e à imersão.
+  </p>
+
+  <div class="container">
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card-box">
+          <h4>🔧 Profissionalismo</h4>
+          <p>Equipe treinada, hierarquia definida e serviços executados com total padrão RP.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card-box">
+          <h4>🏁 Compromisso</h4>
+          <p>Atendimento rápido, organizado e sempre respeitando o servidor.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card-box">
+          <h4>🔥 Qualidade</h4>
+          <p>Desde tuning até reparos completos, tudo feito com excelência.</p>
+        </div>
       </div>
     </div>
   </div>
-</header>
+</section>
 
-<!-- CURSOS -->
-<main class="container my-5">
-<section class="mb-5">
-<h2 class="text-center mb-4">Nossos Cursos</h2>
-<div class="row justify-content-center">
-  <div class="col-sm-4">
-    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#ConsertoModal">
-      <img src="https://i.imgur.com/LTGWCKU.png">
-      <div class="card-body text-center"><p>Conserto de Veículos</p></div>
+<!-- ===== VÍDEOS ===== -->
+<section class="section bg-dark" id="videos">
+  <h2 class="section-title">Vídeos</h2>
+  <p class="section-sub">Confira alguns momentos da nossa mecânica em ação</p>
+
+  <div class="container">
+    <div class="row g-4">
+      <div class="col-md-6 video-box">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-6 video-box">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
-  <div class="col-sm-4">
-    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#TunningModal">
-      <img src="https://imgur.com/NnaqrpG.png">
-      <div class="card-body text-center"><p>Tunning de Veículos</p></div>
+</section>
+
+<!-- ===== REGRAS ===== -->
+<section class="section" id="regras">
+  <h2 class="section-title">Regras da Mecânica</h2>
+  <div class="container">
+    <div class="card-box">
+      <div class="rule"><i class="fa-solid fa-check"></i> Respeitar todos os jogadores e staff.</div>
+      <div class="rule"><i class="fa-solid fa-check"></i> Proibido anti-RP ou abuso de mecânicas.</div>
+      <div class="rule"><i class="fa-solid fa-check"></i> Somente cargos autorizados realizam serviços específicos.</div>
+      <div class="rule"><i class="fa-solid fa-check"></i> Uso obrigatório de uniforme em serviço.</div>
+      <div class="rule"><i class="fa-solid fa-check"></i> Hierarquia deve ser respeitada.</div>
+      <div class="rule"><i class="fa-solid fa-check"></i> Qualquer infração será punida.</div>
     </div>
   </div>
-</div>
 </section>
 
-<!-- CARDS -->
-<section class="cards-animated">
-  <div class="card-animated">
-    <i class="fa-solid fa-car glow-red"></i>
-    <h3>Veículos Restritos</h3>
-    <p>Proibido alterar veículos da prefeitura.</p>
-  </div>
-  <div class="card-animated">
-    <i class="fa-solid fa-coins glow-yellow"></i>
-    <h3>Valores</h3>
-    <p>Seguir tabela oficial da mecânica.</p>
-  </div>
-  <div class="card-animated">
-    <i class="fa-solid fa-headset glow-blue"></i>
-    <h3>Suporte</h3>
-    <p>Procure a gerência para dúvidas.</p>
-  </div>
-</section>
-
-<!-- SOBRE -->
-<section class="about-section">
-<h2 class="text-center mb-4">Sobre Nós</h2>
-<div class="row align-items-center">
-  <div class="col-md-6 text-center">
-    <img src="https://imgur.com/Nw9g2Q2.png">
-  </div>
-  <div class="col-md-6">
-    <p>A Deboxe Customs oferece serviços automotivos com qualidade e excelência.</p>
-  </div>
-</div>
-</section>
-</main>
-
-<!-- MODAIS -->
-<div class="modal fade" id="ConsertoModal" tabindex="-1">
-<div class="modal-dialog modal-lg modal-dialog-centered">
-<div class="modal-content">
-<div class="modal-body modal-video">
-<iframe src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
-</div>
-</div>
-</div>
-</div>
-
-<div class="modal fade" id="TunningModal" tabindex="-1">
-<div class="modal-dialog modal-lg modal-dialog-centered">
-<div class="modal-content">
-<div class="modal-body modal-video">
-<iframe src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
-</div>
-</div>
-</div>
-</div>
-
-<footer class="text-center py-4 text-muted">
-© <span id="year"></span> Deboxe Customs
+<footer>
+© Central Race Mecânica — Todos os direitos reservados
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-document.getElementById('year').textContent=new Date().getFullYear();
-const toggler=document.querySelector('.navbar-toggler');
-const mobileMenu=document.getElementById('mobileMenu');
-toggler.addEventListener('click',()=>mobileMenu.classList.toggle('show'));
+document.addEventListener("keydown",function(e){
+ if(e.key==="F12"||(e.ctrlKey&&e.shiftKey&&["I","J"].includes(e.key))||(e.ctrlKey&&["U","S"].includes(e.key))){
+  e.preventDefault();
+ }
+});
 </script>
 
 </body>
 </html>
-
