--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - Central Race</title>
+<title>Mecânica - Deboxe Customs</title>
 
-<link rel="icon" href="https://imgur.com/0iskhD3.png">
+<link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -190,8 +190,8 @@ footer{
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center gap-3">
-    <img src="https://imgur.com/0iskhD3.png" height="80" draggable="false">
-    <div class="logo">Central Race</div>
+    <img src="https://imgur.com/Nw9g2Q2.png" height="80" draggable="false">
+    <div class="logo">Deboxe Customs</div>
   </div>
 
   <nav class="d-none d-md-flex align-items-center nav-links">
@@ -247,7 +247,7 @@ footer{
   </div>
   <div class="col-md-6">
     <p>
-      A <strong>Central Race</strong> é referência em mecânica na Central RP.
+      A <strong>Deboxe Customs</strong> é referência em mecânica na Central RP.
       Trabalhamos com consertos, tunagem e personalização, sempre respeitando
       as regras da cidade e oferecendo um serviço sério, profissional e de alto nível.
     </p>
@@ -258,7 +258,7 @@ footer{
 </main>
 
 <footer class="text-center py-4">
-© <span id="year"></span> Central Race — Todos os direitos reservados
+© <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -269,3 +269,4 @@ document.onkeydown = e => (e.key==="F12") && e.preventDefault();
 
 </body>
 </html>
+
