--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ footer{
 <h2 class="text-center mb-4">Sobre Nós</h2>
 <div class="row align-items-center">
   <div class="col-md-6 text-center">
-    <img src="https://imgur.com/0iskhD3.png">
+    <img src="https://imgur.com/Nw9g2Q2.png">
   </div>
   <div class="col-md-6">
     <p>
@@ -269,4 +269,5 @@ document.onkeydown = e => (e.key==="F12") && e.preventDefault();
 
 </body>
 </html>
+
 
