--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
   --dourado:#ffcc00;
 }
 
+/* ===== BASE ===== */
 body{
   font-family:'Inter',system-ui,sans-serif;
-  background:#111;
-  color:#eaeaea;
+  background:#fff;
+  color:#222;
   margin:0;
 }
 
 /* ===== TOPO ===== */
 .topbar{
   background:linear-gradient(90deg,#000,#1a0000,#000);
-  border-bottom:2px solid var(--vermelho);
+  border-bottom:3px solid var(--vermelho);
   padding:14px 0;
 }
 
@@ -94,22 +95,36 @@ body{
 .card-service{
   border-radius:16px;
   overflow:hidden;
-  background:#1a1a1a;
-  border:1px solid #222;
+  background:#fff;
+  border:1px solid #ddd;
   transition:.3s;
 }
 
 .card-service:hover{
   transform:translateY(-5px);
-  box-shadow:0 0 30px rgba(225,6,0,.4);
+  box-shadow:0 10px 30px rgba(0,0,0,.15);
 }
 
 .card-service img{
   height:180px;
-  object-fit:cover;
+  width:100%;
+  object-fit:contain;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:#f8f8f8;
+  padding:10px;
 }
 
-/* ===== CARDS REGRAS ===== */
+.card-service .card-body{
+  text-align:center;
+  font-weight:800;
+  font-size:1.05rem;
+  color:#000;
+  letter-spacing:.4px;
+}
+
+/* ===== REGRAS ===== */
 .cards-animated{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
@@ -118,18 +133,19 @@ body{
 }
 
 .card-animated{
-  background:#0f0f0f;
+  background:#fff;
   border-radius:18px;
   padding:30px 25px;
   text-align:center;
   position:relative;
   overflow:hidden;
+  border:1px solid #e5e5e5;
   transition:.3s;
 }
 
 .card-animated:hover{
   transform:translateY(-5px);
-  box-shadow:0 0 40px rgba(255,204,0,.35);
+  box-shadow:0 10px 35px rgba(0,0,0,.15);
 }
 
 .card-animated::after{
@@ -149,19 +165,17 @@ body{
 .glow-red{
   color:var(--vermelho);
   font-size:46px;
-  text-shadow:0 0 10px var(--vermelho);
 }
 
 .glow-yellow{
   color:var(--dourado);
   font-size:46px;
-  text-shadow:0 0 10px var(--dourado);
 }
 
 /* ===== SOBRE ===== */
 .about-section{
-  background:#0d0d0d;
-  border:1px solid #222;
+  background:#f9f9f9;
+  border:1px solid #ddd;
   border-radius:18px;
   padding:40px 25px;
   margin-top:60px;
@@ -173,9 +187,9 @@ body{
 
 /* ===== FOOTER ===== */
 footer{
-  background:#000;
-  border-top:1px solid #222;
-  color:#888;
+  background:#fff;
+  border-top:1px solid #ddd;
+  color:#555;
 }
 
 @keyframes runLine{
@@ -211,15 +225,15 @@ footer{
 <h2 class="text-center mb-4">Nossos Cursos</h2>
 <div class="row justify-content-center">
   <div class="col-md-4">
-    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#ConsertoModal">
+    <div class="card card-service">
       <img src="https://i.imgur.com/LTGWCKU.png">
-      <div class="card-body text-center">Conserto de Veículos</div>
+      <div class="card-body">Conserto de Veículos</div>
     </div>
   </div>
   <div class="col-md-4">
-    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#TunningModal">
+    <div class="card card-service">
       <img src="https://imgur.com/NnaqrpG.png">
-      <div class="card-body text-center">Tunning de Veículos</div>
+      <div class="card-body">Tunning de Veículos</div>
     </div>
   </div>
 </div>
@@ -247,9 +261,9 @@ footer{
   </div>
   <div class="col-md-6">
     <p>
-      A <strong>Deboxe Customs</strong> é referência em mecânica na Central RP.
-      Trabalhamos com consertos, tunagem e personalização, sempre respeitando
-      as regras da cidade e oferecendo um serviço sério, profissional e de alto nível.
+      A <strong>Deboxe Customs</strong> é referência em mecânica na Central RP,
+      oferecendo serviços de alto padrão, sempre respeitando as regras da cidade
+      e entregando profissionalismo em cada atendimento.
     </p>
   </div>
 </div>
@@ -264,10 +278,7 @@ footer{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
-document.onkeydown = e => (e.key==="F12") && e.preventDefault();
 </script>
 
 </body>
 </html>
-
-
